Add per-volume photo capture indicators

--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
                                             <div class="photo-capture">
                                                 <button type="button" class="btn btn-ghost" id="mov-foto-trigger"><i class="fas fa-camera"></i> Capturar foto</button>
                                                 <input type="file" id="mov-foto-input" accept="image/*" capture="environment" class="sr-only">
-                                                <div class="helper-text" id="mov-foto-status">Nenhuma foto anexada.</div>
+                                                <div class="helper-text pending" id="mov-foto-status">Nenhuma foto anexada.</div>
                                             </div>
                                         </div>
                                     </div>
